[backend] Switching get exercises to raw native query