@@ -638,74 +638,93 @@ public class ExerciseApi extends RestBehavior {
 
   @GetMapping("/api/exercises")
   public List<ExerciseSimple> exercises() {
-    Iterable<RawExercise> exercises = currentUser().isAdmin() ? exerciseRepository.rawAll()
-            : exerciseRepository.rawAllGranted(currentUser().getId());
+      // We get the exercises depending on whether or not we are granted
+      Iterable<RawExercise> exercises = currentUser().isAdmin() ? exerciseRepository.rawAll()
+              : exerciseRepository.rawAllGranted(currentUser().getId());
 
-    List<String> listOfIds = fromIterable(exercises).stream()
-            .map(RawExercise::getExercise_id)
-            .distinct()
-            .toList();
+      // From the list of exercises, we get the list of the injects ids
+      List<String> listOfInjectIds = fromIterable(exercises).stream()
+              .filter(exercise -> exercise.getInject_ids() != null)
+              .flatMap(exercise -> exercise.getInject_ids().stream())
+              .distinct()
+              .toList();
 
-    List<String> listOfInjectIds = fromIterable(exercises).stream()
-            .filter(exercise -> exercise.getInject_ids() != null)
-            .flatMap(exercise -> exercise.getInject_ids().stream())
-            .distinct()
-            .toList();
+      // We get the injects corresponding linked to the exercises
+      List<Inject> listOfInjects = new ArrayList<>();
+      List<RawInject> listOfRawInjects = injectRepository.findRawByIds(listOfInjectIds);
 
-    List<Inject> listOfInjects = new ArrayList<>();
-    List<RawInject> listOfRawInjects = injectRepository.findRawByIds(listOfInjectIds);
+      // From the list of injects, we get all the inject expectationsIds that we then
+      // get and put into a map with the expections ids as key
+      Map<String, RawInjectExpectation> mapOfInjectsExpectations = injectExpectationRepository.rawByIds(
+              listOfRawInjects.stream().flatMap(rawInject -> rawInject.getInject_expectations().stream()).toList()
+      ).stream().collect(Collectors.toMap(RawInjectExpectation::getInject_expectation_id, Function.identity()));
 
-    Map<String, RawInjectExpectation> mapOfInjectsExpectations = injectExpectationRepository.rawByIds(
-            listOfRawInjects.stream().flatMap(rawInject -> rawInject.getInject_expectations().stream()).toList()
-            ).stream().collect(Collectors.toMap(RawInjectExpectation::getInject_expectation_id, Function.identity()));
+      // We get the asset groups from the injects AND the injects expectations as those can also have asset groups
+      // We then make a map out of it for faster access
+      Map<String, RawAssetGroup> mapOfAssetGroups = assetGroupRepository
+              .rawAssetGroupByIds(
+                      Stream.concat(
+                                      mapOfInjectsExpectations.values().stream()
+                                              .map(RawInjectExpectation::getAsset_group_id)
+                                              .filter(Objects::nonNull),
+                                      listOfRawInjects.stream()
+                                              .map(RawInject::getAsset_group_id)
+                                              .filter(Objects::nonNull))
+                              .toList()).stream()
+              .collect(Collectors.toMap(RawAssetGroup::getAsset_group_id, Function.identity()));
 
-    Map<String, RawAssetGroup> mapOfAssetGroups = assetGroupRepository
-            .rawAssetGroupByIds(
-                    Stream.concat(mapOfInjectsExpectations.values().stream().map(RawInjectExpectation::getAsset_group_id).filter(Objects::nonNull),
-                    listOfRawInjects.stream().map(RawInject::getAsset_group_id).filter(Objects::nonNull)).toList()).stream()
-            .collect(Collectors.toMap(RawAssetGroup::getAsset_group_id, Function.identity()));
+      // We get all the assets that are
+      // 1 - linked to an inject
+      // 2 - linked to an asset group linked to an inject
+      // 3 - linked to an inject expectation
+      // 4 - linked to an asset group linked to an inject expectations
+      // We then make a map out of it
+      Map<String, RawAsset> mapOfAssets = assetRepository
+              .rawByIds(listOfRawInjects.stream().flatMap(rawInject -> {
+                  return Stream.concat(Stream.concat(
+                                  rawInject.getInject_asset_groups().stream()
+                                          .flatMap(assetGroup -> mapOfAssetGroups.get(assetGroup).getAsset_ids().stream()),
+                                  rawInject.getInject_assets().stream()
+                          ), Stream.concat(
+                                  rawInject.getInject_expectations().stream()
+                                          .map(mapOfInjectsExpectations::get)
+                                          .map(RawInjectExpectation::getAsset_id),
+                                  rawInject.getInject_expectations().stream()
+                                          .map(mapOfInjectsExpectations::get)
+                                          .flatMap(injectExpectation -> injectExpectation.getAsset_group_id() != null ? mapOfAssetGroups.get(injectExpectation.getAsset_group_id()).getAsset_ids().stream() : Stream.empty()))
+                  );
+              }).filter(Objects::nonNull).toList()).stream()
+              .collect(Collectors.toMap(RawAsset::getAsset_id, Function.identity()));
 
-    Map<String, RawAsset> mapOfAssets = assetRepository
-            .rawByIds(listOfRawInjects.stream().flatMap(rawInject -> {
-              return Stream.concat(Stream.concat(
-                      rawInject.getInject_asset_groups().stream()
-                              .flatMap(assetGroup -> mapOfAssetGroups.get(assetGroup).getAsset_ids().stream()),
-                      rawInject.getInject_assets().stream()
-                        ),Stream.concat(
-                              rawInject.getInject_expectations().stream()
-                                .map(mapOfInjectsExpectations::get)
-                                .map(RawInjectExpectation::getAsset_id),
-                              rawInject.getInject_expectations().stream()
-                                .map(mapOfInjectsExpectations::get)
-                                .flatMap(injectExpectation -> injectExpectation.getAsset_group_id() != null ? mapOfAssetGroups.get(injectExpectation.getAsset_group_id()).getAsset_ids().stream() : Stream.empty()))
-                      );
-            }).filter(Objects::nonNull).toList()).stream()
-            .collect(Collectors.toMap(RawAsset::getAsset_id, Function.identity()));
+      // We get all the teams that are linked to an inject or an asset group
+      // Then we make a map out of it for faster access
+      Map<String, RawTeam> mapOfRawTeamsById = teamRepository.rawTeamByIds(listOfRawInjects.stream()
+              .flatMap(
+                      rawInject -> Stream.concat(
+                              rawInject.getInject_teams().stream(),
+                              rawInject.getInject_expectations().stream().map(expectationId -> mapOfInjectsExpectations.get(expectationId).getTeam_id())
+                      ).filter(Objects::nonNull)
+              ).distinct().toList()).stream().collect(Collectors.toMap(RawTeam::getTeam_id, Function.identity()));
 
-    Map<String, RawTeam> mapOfRawTeamsById = teamRepository.rawTeamByIds(listOfRawInjects.stream()
-            .flatMap(
-                    rawInject -> Stream.concat(
-                            rawInject.getInject_teams().stream(),
-                            rawInject.getInject_expectations().stream().map(expectationId -> mapOfInjectsExpectations.get(expectationId).getTeam_id())
-                    ).filter(Objects::nonNull)
-            ).distinct().toList()).stream().collect(Collectors.toMap(RawTeam::getTeam_id, Function.identity()));
+      // Once we have all of this, we create an Inject for each InjectRaw that we have using all the Raw objects we got
+      // Then we make a map out of it for faster access
+      listOfRawInjects.stream().map((inject) -> Inject.fromRawInject(inject, mapOfRawTeamsById, mapOfInjectsExpectations, mapOfAssetGroups, mapOfAssets)).forEach(listOfInjects::add);
+      Map<String, Inject> mapOfInjectsById = listOfInjects.stream().collect(Collectors.toMap(Inject::getId, Function.identity()));
 
-    listOfRawInjects.stream().map((inject) -> Inject.fromRawInject(inject, mapOfRawTeamsById, mapOfInjectsExpectations, mapOfAssetGroups, mapOfAssets)).forEach(listOfInjects::add);
-    Map<String, Inject> mapOfInjectsById = listOfInjects.stream().collect(Collectors.toMap(Inject::getId, Function.identity()));
+      // Finally, for all exercices we got, we convert them to classic exercises with the injects we created
+      return fromIterable(exercises).stream().map(currentExercice -> {
+          // We make a list out of all the injects that are linked to the exercise
+          List<Inject> listOfInjectsOfExercise = new ArrayList<>();
+          if (currentExercice.getInject_ids() != null) {
+              listOfInjectsOfExercise = currentExercice.getInject_ids().stream().map(mapOfInjectsById::get).collect(Collectors.toList());
+          }
 
-    return listOfIds.stream().map(exerciseId -> {
-      RawExercise currentExercice =
-              fromIterable(exercises).stream().filter((exercice) -> exercice.getExercise_id().equals(exerciseId)).findFirst().get();
-
-      List<Inject> listOfInjectsOfExercise = new ArrayList<>();
-      if (currentExercice.getInject_ids() != null) {
-        listOfInjectsOfExercise = currentExercice.getInject_ids().stream().map(mapOfInjectsById::get).collect(Collectors.toList());
-      }
-      return ExerciseSimple.fromRawExercise(currentExercice,
-              listOfInjectsOfExercise);
-    }).toList();
+          // We create a new exercise out of the Raw object
+          return ExerciseSimple.fromRawExercise(currentExercice,
+                  listOfInjectsOfExercise);
+      }).toList();
   }
-  // endregion
+    // endregion
 
   // region communication
   @GetMapping("/api/exercises/{exerciseId}/communications")
